--- a/exercices/AndroidManifest.xml
+++ b/exercices/AndroidManifest.xml
@@ -1,5 +1,3 @@
-
-
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.photoeffect"
@@ -34,6 +32,11 @@ android:versionName="1.0" >
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
+
+    <!-- API key android map sdk  -->
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="" />
 </application>
 
 </manifest>
